# pyFiberPhotometry

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
pyFiberPhotometry/: __init__.py  core.py  io.py  utils.py
pyFiberPhotometry/variants/: RDT.py  __init__.py
tests/: test_basic.py
